# deamon_core

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  daemon_vox.py  daemon_vox_client.py  pyproject.toml  requirements.txt  start.bat  tuning.py
app/: __init__.py
app/api/: __init__.py  main.py  schemas.py
app/api/routes/: __init__.py  http.py  ui.py  ws.py
app/core/: __init__.py  audio_pipeline_v2.py  config.py  ears.py  logger.py  stt.py  vox.py
app/web/static/css/: style.css
app/web/static/js/: app.js
app/web/templates/: index.html
markdown/: README.md  context.md  project_structure.md
scripts/: build_voice_cache.py
tests/: conftest.py
tests/api/: test_main.py
tests/api/routes/: test_http.py  test_ui.py  test_ws.py
tests/core/: test_config.py  test_ears.py  test_stt.py  test_vox.py
