[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daemon"
version = "0.1.0"
description = "Lokalny, multimodalny asystent AI sterowany gosem"
requires-python = ">=3.11"
dependencies = [
    # backend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "jinja2>=3.1.0",
    # konfiguracja
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    # LLM
    "httpx>=0.27.0",
    # STT
    "faster-whisper>=1.0.0",
    # Wake word
    "pvporcupine>=3.0.0",
    "openwakeword>=0.6.0",
    # pamiec
    "chromadb>=0.5.0",
    # narzedzia (internet)
    "duckduckgo-search>=6.0",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    # ML / audio
    "numpy>=1.26",
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "TTS>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "api*"]

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = [
  "tests"
]
addopts = "--strict-config --strict-markers --cov=app --cov-report=term-missing --cov-fail-under=90"
